[package]
name = "deliver"
version = "0.2.0"
edition = "2024"
authors = ["coffeebean <beanc904@outlook.com>"]
description = "This is a mini p2p file transfer application written in Rust."

[dependencies]
clap = { version = "4.5.45", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
tokio = { version = "1", features = ["full"] }
serde_json = "1"
console = "0.16.0"
dialoguer = "0.11.0"
if-addrs = "0.14.0"
indicatif = "0.18.0"
sha2 = "0.10.9"
log = "0.4.27"
env_logger = "0.11.8"
anyhow = "1.0.99"
crossterm = "0.29.0"
zip = "3.0"
zip-extensions = "0.8.3"
